# Automation

./: .gitignore  Agent.md  Dockerfile  README.md  main.py  meme.db  pyproject.toml  run_api.py  tree.txt
controllers/: ai_controller.py  chat_controller.py  meme_controller.py  news_controller.py  rag_controller.py  system_controller.py
desktop/components/: sidebar.py
desktop/pages/: history_page.py  rag_page.py  web_page.py
repository/: chat_repository.py  meme.py  meme_repository.py  news_repository.py  rag_repository.py  setting_repository.py
repository/database/: db.py  init_db.py
services/: ai_service.py  embedding_service.py  image_generate_service.py  meme_service.py  news_service.py  news_task_service.py  rag_service.py  text_service.py  web_scrapper_service.py  websocket_service.py
test/: main.py
ui/: main_window.py
ui/components/: console_widget.py  news_card.py  sidebar.py
ui/pages/: chat_page.py  database_page.py  home_page.py  meme_page.py  news_detail_page.py  news_page.py  settings_page.py
utils/: api_response.py  logger.py  pagination.py  theme_manager.py  time_utils.py  websocket_manager.py
utils/contants/: api_status.py  error_code.py  error_message.py  status.py
utils/exception/: api_exception.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/history/: page.tsx
web/app/news/: page.tsx
web/app/rag/: page.tsx
web/app/settings/: page.tsx
web/components/layout/: console.tsx  sidebar.tsx
web/context/: StudioContext.tsx
web/types/: api.ts
(+6 files in other folders)
