[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "drf-yasg>=1.21.14",
    "fastapi>=0.136.1",
    "google-auth>=2.47.0",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "psycopg2>=2.9.11",
    "pyside6>=6.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "uvicorn>=0.46.0",
]
